# AdventOfCode2021

advent-of-code/: README.rst  pyproject.toml
advent-of-code/data/: day1.csv
advent-of-code/notebooks/: Day1.ipynb  Day2.ipynb
