[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["David Heurtaux <heurtaux.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
streamz = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
